# opencl-study

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  common.inc  common.inl  saxpy.cpp  version_check.cpp
src/boost_compute/: CMakeLists.txt  hello_world.cpp  simple_kernel.cpp  simple_kernel_cl.cpp
